--- a/includes/index.hbs
+++ b/includes/index.hbs
@@ -53,7 +53,7 @@
                 </div>
             </a> --}}
             <div class="header-title">
-                MyArxiv
+                王天奇爱看的论文
             </div>
         </div>
 
